Nova atualização da imagem

--- a/login.html
+++ b/login.html
@@ -17,6 +17,7 @@
                 <p>Acompanhamento das manutenções preventivas de equipamentos de terceiros.</p>
             </div>
             <div class="form-content">
+                <img src="/static/logo.png" alt="">
                 <h2>LOGIN</h2>
                 <form action="#">
                     <div class="input-field">
@@ -44,6 +45,7 @@
                 <p>Acompanhamento das manutenções preventivas de equipamentos de terceiros.</p>
             </div>
             <div class="form-content">
+                <img src="/static/logo.png" alt="">
                 <h2>CADASTRAR</h2>
                 <form action="#">
                     <div class="input-field">
