--- a/login.html
+++ b/login.html
@@ -6,8 +6,34 @@
     <title>Login</title>
     <link rel="stylesheet" href="http://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0">
     <link rel="stylesheet" href="css/login.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link type="module" rel="stylesheet" href="css/main.css">
     <script src="script.js" defer></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js"></script>
+    <script type="module">
+        // Import the functions you need from the SDKs you need
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+        // TODO: Add SDKs for Firebase products that you want to use
+        // https://firebase.google.com/docs/web/setup#available-libraries
+      
+        // Your web app's Firebase configuration
+        const firebaseConfig = {
+          apiKey: "AIzaSyD7hSB26zKy2ojX1pHHSJCjF6Jqsy0hD1w",
+          authDomain: "controle-de-emhde-terceiros.firebaseapp.com",
+          databaseURL: "https://controle-de-emhde-terceiros-default-rtdb.firebaseio.com",
+          projectId: "controle-de-emhde-terceiros",
+          storageBucket: "controle-de-emhde-terceiros.appspot.com",
+          messagingSenderId: "360717669238",
+          appId: "1:360717669238:web:63e1a635e12054ab19a057"
+        };
+      
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
+        // Referência ao módulo de autenticação
+        const auth = firebase.auth();
+    </script>
 </head>
 <body>
     <div class="form-popup">
@@ -21,11 +47,11 @@
                 <h2>LOGIN</h2>
                 <form action="#">
                     <div class="input-field">
-                        <input type="text" required>
+                        <input type="text" id="loginEmail" required>
                         <label>Email</label>
                     </div>
                     <div class="input-field">
-                        <input type="password" required>
+                        <input type="password" id="loginPassword" required>
                         <label>Senha</label>
                     </div>
                     <a href="#" class="forgot-pass">Esqueceu sua senha?</a>
@@ -49,12 +75,26 @@
                 <h2>CADASTRAR</h2>
                 <form action="#">
                     <div class="input-field">
-                        <input type="text" required>
-                        <label>Cadastrar email</label>
+                        <input type="text" id="signupEmpresa" required>
+                        <label>Empresa</label>
                     </div>
                     <div class="input-field">
-                        <input type="password" required>
+                        <input type="text" id="signupEmail" required>
+                        <label>Cadastrar email</label>
+                    </div>
+                    <div class="input-fieldError">
+                        <span id="emailValidation" class="error-message"></span>
+                    </div>
+                    <div class="input-field">
+                        <input type="password" id="signupSenha" required>
                         <label>Criar senha</label>
+                    </div>
+                    <div class="input-field">
+                        <input type="password" id="signupConfirmPassword" required>
+                        <label>Confirmar senha</label>
+                    </div>
+                    <div class="input-fieldError">
+                        <span id="confirmPasswordError" class="error-message"></span>
                     </div>
                     <div class="policy-text">
                         <input type="checkbox" id="policy">
