Botões da tabela funcionando

--- a/public/login.html
+++ b/public/login.html
@@ -75,7 +75,7 @@
                         <span id="confirmPasswordError" class="error-message"></span>
                     </div>
                     <div class="policy-text">
-                        <input type="checkbox" id="policy">
+                        <input type="checkbox" id="policy" required>
                         <label for="policy">
                             Concordo com os
                             <a href="#">Termos e condições</a>
