--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,6 @@
   <link rel="stylesheet" href="css/records.css">
   <link rel="stylesheet" href="css/modal.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
-  <script type="module" src="main.js"></script>
   <title>Controle de EMH de Terceiros</title>
 </head>
 
@@ -93,7 +92,7 @@
   <footer>
     Copyright &copy; Felipe Costa
   </footer>
-  
+  <script src="main.js"></script>
   <script src="https://mozilla.github.io/pdf.js/build/pdf.js"></script>
 </body>
 
